--- a/index.html
+++ b/index.html
@@ -4,17 +4,38 @@
 	<title></title>
 </head>
 <body>
-	
-	<style>
+
+<style>
+
+	html {
+	}
+	.title {
+		font-size:50px;
+		font-weight:bold;
+		text-align:center;
+		color:#090089;
+		line-height:32px;
+		margin-top:20px;
+	}
+	.sub-title {
+		font-size:32px;
+		text-align:center;
+		color:rgb(21, 173, 63);
+	}
+	.sub-sub-title {
+		margin-bottom:20px;
+	}
+
 	.wrapper {
 		text-align:center;
+		position:relative;
 	}
 	#container {
-		width: 800px;
+		width: 1112px;
 		display:inline-block;
 	}
 	img {
-	  width:150px; height:150px;
+		width:267px; height:150px;
 	}
 
 
@@ -29,17 +50,18 @@
 	}
 
 	.flip-container, .front, .back {
-		width: 150px; height: 150px;
+		width: 267px; height: 150px;
 		float:left;
-		margin:0 15px 15px 0;
+		margin:0 11px 11px 0;
 	}
 
 	.flipper {
 		transition: 0.6s;
 		transform-style: preserve-3d;
 		position: relative;
-		border:solid 2px black;
-		width:150px; height:150px;
+		border:solid 1px black;
+		width:267px; height:150px;
+		border-radius:6px;
 	}
 
 	.front, .back {
@@ -53,19 +75,53 @@
 		transform: rotateY(0deg);
 	}
 	.back { transform: rotateY(180deg); }
-	</style>
+	.hidden { display:none; }
+	.won {
+		position:absolute;
+		background-color:white;
+		opacity:0.9;
+		top:110px;
+		width:100%;
+		height:700px;
+		font-size:33px;
+		font-weight:bold;
+		direction:rtl;
+	}
+</style>
 
-	<div class="wrapper">
-		<div id="container">
+<div class="wrapper">
 
-		</div>
-		<div id="won">
-			Great!!!
-		</div>
+	<div class="title">
+		22.07.2015
+	</div>
+	<div class="sub-title">
+		דלית וגילי מתחתנים
+	</div>
+	<div class="sub-sub-title">
+		בקיו, גליל ים
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="game.js" type="text/javascript"></script>
+	<div id="container">
+
+	</div>
+	<div class="won hidden">
+		<br/><br/>
+		כל הכבוד!!
+		<br/><br/>
+		סיימתם ב
+		<span class="time"></span>
+		שניות
+		<br/><br/><br/>
+			<span style="font-size:24px;">
+				אתם חייבים לנו
+				<span class="shots"></span>
+				 שוטים בחתונה!
+			</span>
+	</div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="game.js" type="text/javascript"></script>
 
 </body>
 </html>
